fix spacing between posts

--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -14,7 +14,7 @@
   border-radius: 24px;
 }
 .post_frame-margin{
-  margin-top: 15px;
+  margin-top: 32px;
 }
 .border-radius-top{
   border-radius: 24px 24px 0 0px;
